[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/RadialCandleHall.gd" id="1"]

[node name="RadialCandleHall" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
visible = false
script = ExtResource("1")

[node name="OptionLayer" type="Control" parent="."]
custom_minimum_size = Vector2(220, 200)
anchor_right = 0.0
anchor_bottom = 0.0
mouse_filter = 2
pivot_offset = Vector2(110, 100)

[node name="StartButton" type="Button" parent="OptionLayer"]
custom_minimum_size = Vector2(160, 48)
position = Vector2(-80, -80)
text = "Start Ritual"

[node name="CancelButton" type="Button" parent="OptionLayer"]
custom_minimum_size = Vector2(160, 48)
position = Vector2(-80, 32)
text = "Cancel"

[node name="Status" type="Label" parent="OptionLayer"]
custom_minimum_size = Vector2(160, 32)
position = Vector2(-80, -16)
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1
text = ""
*** End EOF
